<resources>
    <string name="app_name">GPS_Alarm</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="LocationImage">LocationImage</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thr</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="floatingActionButton">FloatingActionButton</string>
    <string name="save">Save</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="stop">STOP</string>
</resources>