<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CDDC39">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textSunday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/sunday"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight=" 1"
                    android:layout_width="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textMonday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#2196F3"
                        android:text="@string/monday"
                        android:textAlignment="center"
                        android:textColor="#FFFDE7"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textTuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Tuesday"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textWednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textSunday" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textThursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textMonday" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_width="wrap_content" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textFriday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textSunday" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:id="@+id/textSaturday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5" />

            </LinearLayout>

            <TextView
                android:id="@+id/item_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="#8BC34A"
                app:cardCornerRadius="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/locateImageView"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/LocationImage"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>